# swing-stock-manipulation

./: .gitignore  README.md  pyproject.toml  pytest.ini
.streamlit/: config.toml
docs/: PRODUCT_BLUEPRINT.md
swingdesk/: app.py  cli.py  config.py  scheduler.py  storage.py
swingdesk/analyze/: chart_signals.py  decision.py  discovery.py  early_exits.py  execution.py  exits.py  expected_range.py  factors.py  glossary.py  intraday.py  liquidity.py  manipulation.py  market_calendar.py  market_metrics.py  ml_direction.py  quality.py  risk.py  score.py  screener.py  sectors.py  sentiment.py  setups.py  signal_analysis.py  smallcaps.py  spillover.py  summary.py  tca.py  technicals.py  thesis.py
swingdesk/backtest/: engine.py  exit_tuner.py  metrics.py  optimizer.py
swingdesk/ingest/: earnings.py  fundamentals.py  intraday.py  (+5 more)
tests/: conftest.py  test_backtest.py  test_cli.py  test_decision.py  test_execution.py  test_exit_tuner.py  test_expected_range.py  test_factors.py  test_fundamentals.py  test_holdings.py  test_imports.py  test_intraday.py  test_liquidity.py  test_manipulation.py  test_market_calendar.py  test_market_metrics.py  test_ml_direction.py  test_news.py  test_news_scrape.py  test_nse.py  test_paper_auto_fetch.py  test_paper_trader.py  test_phase7.py  test_phase8.py  test_phase9.py  test_plans.py  test_portfolio.py  test_risk.py  test_score.py  test_sectors.py  test_sentiment.py  test_setups.py  test_signal_analysis.py  test_smallcap_watchlist.py  test_smallcaps.py  test_spillover.py  test_storage.py  test_tca.py  test_technicals.py  test_telegram.py  (+1 more)
(+8 files in other folders)
